# clipthread-ui-tkinter

./: clipthread-tkinter-ui.service  database.db  pyproject.toml  service_install.py  ui.py
